tests/ui/rfcs/rfc-2632-const-trait-impl/specialization/non-const-default-const-specialized.stderr
warning: the feature `effects` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/non-const-default-const-specialized.rs:6:30
   |
LL | #![feature(const_trait_impl, effects)]
   |                              ^^^^^^^
   |
   = note: see issue #102090 <https://github.com/rust-lang/rust/issues/102090> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0119]: conflicting implementations of trait `Value` for type `FortyTwo`
  --> $DIR/non-const-default-const-specialized.rs:27:1
   |
LL | impl<T> Value for T {
   | ------------------- first implementation here
...
LL | impl const Value for FortyTwo {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `FortyTwo`

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0119`.
